# MGrid

./: .gitignore  CMakeLists.txt  Makefile  README.md  main  main.cpp
GenerateData/: DataSetGenerator.cpp  DataSetGenerator.h
MGrid/Cluster/: Cluster.cpp  Cluster.h
MGrid/MGrid/: .MGrid.cpp.swp  MGrid.cpp  MGrid.h
MGrid/Pivot/: Pivot.cpp  Pivot.h  PivotIncrementalSelection.cpp  PivotIncrementalSelection.h
MetricStructs/: MetricObject.h
Query/: MGridQuery.cpp  MGridQuery.h  Query.h  QueryParameter.h
